--- a/src/components/AllCss.module.css
+++ b/src/components/AllCss.module.css
@@ -1174,3 +1174,137 @@ img:hover {
   font-style: normal;
   letter-spacing: -2%;
 }
+
+.titleTextDet {
+  font-family: "Agdasima", sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 60px;
+  letter-spacing: 0%;
+  color: #241717;
+}
+
+.descTextDet {
+  max-width: 750px;
+  color: #414651;
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 30px;
+  font-style: normal;
+  letter-spacing: -3%;
+}
+
+.btnOrangeDet {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  background-color: var(--primary-color);
+  letter-spacing: -2%;
+  border-radius: 40px;
+  border: none;
+  padding: 10px 18px 10px 18px;
+  transition: background-color 0.3s ease, color 0.3s ease; /* Add transition */
+}
+
+.btnOrangeDet:hover {
+  background-color: var(--primary-light);
+  color: #ffffff; /* Change text color on hover */
+}
+.btnPreviewDet {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--primary-color);
+  background-color: #ffecd3;
+  letter-spacing: -2%;
+  border-radius: 40px;
+  border: none;
+  padding: 10px 18px 10px 18px;
+  transition: background-color 0.3s ease, color 0.3s ease; /* Add transition */
+}
+
+.btnPreviewDet:hover {
+  background-color: #ffecd3;
+}
+
+.breadcrumb .breadcrumb-item {
+  text-decoration: none;
+  color: #535862;
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  letter-spacing: -2%;
+}
+
+.breadcrumb .breadcrumb-item-active {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  letter-spacing: -2%;
+  color: #000000;
+}
+
+.statName {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  letter-spacing: -2%;
+  color: #000000;
+}
+.statPara {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  letter-spacing: -2%;
+  color: #535862;
+}
+
+.templateFrame {
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
+}
+
+.cropBox {
+  height: 550px; /* Adjust height as you like */
+  overflow: hidden; /* Hides the bottom part */
+  border-radius: 16px;
+}
+
+.cropBox img {
+  border-radius: 16px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Zoom + crop */
+  object-position: top; /* Crop from bottom */
+}
+
+.aboutSubhead {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  font-style: normal;
+  letter-spacing: -2%;
+  color: #000000;
+}
