--- a/src/components/dashboard/product/allproducts/allproducts.module.css
+++ b/src/components/dashboard/product/allproducts/allproducts.module.css
@@ -125,8 +125,8 @@ tbody td {
   font-size: 14px;
   line-height: 20px;
   letter-spacing: -2%;
-  background: #f2f4f7;
-  color: #344054;
+  background: #38383a;
+  color: #f8f9fa;
 }
 
 .statusNum {
